[LFC][IFC] Do not take hanging whitespace sequence into account while finding expansion opportunities https://bugs.webkit.org/show_bug.cgi?id=231132

Reviewed by Antti Koivisto.

Source/WebCore:

Ignore hanging whitespace for expansion opportunities.
This patch fixes imported/w3c/web-platform-tests/css/css-text/white-space/textarea-pre-wrap-014.html

* layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::applyRunExpansion):

LayoutTests:

* TestExpectations:


Canonical link: https://commits.webkit.org/242459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283486 268f45cc-cd09-0410-ab3c-d52691b4dbfc